new proj/src/objects/Clause_Review__c.object
<CustomObject>
    <fields>
        <fullName>GE_Assessor_Determination__c</fullName>
        <label>Assessor Determination</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept with Tailoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Comments_Tailoring__c</fullName>
        <label>Comments/Tailoring</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Company_Customer_Name__c</fullName>
        <formula>GE_Support_Request__r.GE_Company_Customer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company/Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Contracts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Due_Date_Flag__c</fullName>
        <formula>GE_Support_Request__r.GE_Due_Date_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Due_Date__c</fullName>
        <formula>GE_Support_Request__r.GE_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_Functional_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated based on the Department</description>
        <label>Functional Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clause_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Objective_Evidence__c</fullName>
        <label>Objective Evidence</label>
        <picklist>
            <picklistValues>
                <fullName>Have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Have</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Original_Clause_Comments__c</fullName>
        <label>Original Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Review_Frequency__c</fullName>
        <label>Review Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review for each solicitation/contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Support_Request__c</fullName>
        <label>Support Request</label>
        <referenceTo>Support_Request__c</referenceTo>
        <relationshipLabel>Clause Reviews</relationshipLabel>
        <relationshipName>Clause_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_Tailoring_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tailoring Needed</label>
        <type>Checkbox</type>
    </fields>
    <label>Clause Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HR_Pending_Reviews</fullName>
        <columns>NAME</columns>
        <columns>GE_Company_Customer_Name__c</columns>
        <columns>GE_Due_Date__c</columns>
        <columns>GE_Due_Date_Flag__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>GE_Support_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_Department__c</field>
            <operation>equals</operation>
            <value>Human Resources</value>
        </filters>
        <filters>
            <field>GE_Assessor_Determination__c</field>
            <operation>equals</operation>
        </filters>
        <label>HR Pending Reviews</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Supply_Chain_Pending_Reviews</fullName>
        <columns>NAME</columns>
        <columns>GE_Company_Customer_Name__c</columns>
        <columns>GE_Due_Date__c</columns>
        <columns>GE_Due_Date_Flag__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>GE_Support_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_Department__c</field>
            <operation>equals</operation>
            <value>Supply Chain</value>
        </filters>
        <label>Supply Chain Pending Reviews</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clause Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>